<resources>
    <string name="app_name">Form</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="agree_to_terms_and_conditions">Agree to terms and conditions</string>
    <string name="submit">submit</string>
</resources>
